Bug 443505 - global menubar shows an entry called No text
Summary: global menubar shows an entry called No text
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-09 05:09 UTC by doncbugs
Modified: 2022-04-27 08:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a menubar option labeled No text (10.58 KB, image/png)
2021-10-09 05:09 UTC, doncbugs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description doncbugs 2021-10-09 05:09:13 UTC
Created attachment 142272 [details]
a menubar option labeled No text

SUMMARY
Kolourpaint shows an entry called "no text" when using the global menubar. The entry seems to allow selecting from the tools.

STEPS TO REPRODUCE
1. Add the global menubar
2. Open a new instance of kolourpaint
3. 

OBSERVED RESULT
Between Colors and Settings lies "No text"

EXPECTED RESULT
No text should probably be called "Tools"

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Kolourpaint version 21.11.70
Comment 1 Kai Uwe Broulik 2022-04-27 07:58:42 UTC
Git commit 2e056ed6e563f5f0fd7975186db8238adb20b6cf by Kai Uwe Broulik.
Committed on 27/04/2022 at 07:33.
Pushed by broulik into branch 'master'.

[Global Menu] Respect toplevel menu action visibility

Kolourpaint has hidden "Tools" menu, which would show up in
global menu otherwise.

Moreover, don't `void*` cast so QML can access the `QAction`

M  +1    -1    applets/appmenu/package/contents/ui/main.qml
M  +2    -2    applets/appmenu/plugin/appmenumodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/2e056ed6e563f5f0fd7975186db8238adb20b6cf
Comment 2 Kai Uwe Broulik 2022-04-27 08:08:59 UTC
Git commit 0b938e5ffb5a8a299c9bbca5d621a8fc8f737feb by Kai Uwe Broulik.
Committed on 27/04/2022 at 08:08.
Pushed by broulik into branch 'Plasma/5.24'.

[Global Menu] Respect toplevel menu action visibility

Kolourpaint has hidden "Tools" menu, which would show up in
global menu otherwise.

Moreover, don't `void*` cast so QML can access the `QAction`


(cherry picked from commit 2e056ed6e563f5f0fd7975186db8238adb20b6cf)

M  +1    -1    applets/appmenu/package/contents/ui/main.qml
M  +2    -2    applets/appmenu/plugin/appmenumodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0b938e5ffb5a8a299c9bbca5d621a8fc8f737feb