[Global Menu] Respect toplevel menu action visibility

Kolourpaint has hidden "Tools" menu, which would show up in
global menu otherwise.

Moreover, don't `void*` cast so QML can access the `QAction`

BUG: 443505